--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-	<name>DocumentManagement</name>
+    <name>DocumentManagement</name>
     <description>This is a testing project</description>
     <groupId>datateh</groupId>
     <artifactId>DocumentManagement</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.4</version>
     <packaging>war</packaging>
-	
-	    <repositories>
+
+    <repositories>
         <repository>
             <id>maven2-repository.java.net</id>
             <name>Java.net Repository for Maven</name>
@@ -28,12 +28,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20140107</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-server</artifactId>
             <version>1.19</version>
@@ -45,11 +39,11 @@
             <version>1.19</version>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>com.sun.jersey</groupId>-->
-            <!--<artifactId>jersey-json</artifactId>-->
-            <!--<version>1.8</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-json</artifactId>
+            <version>1.8</version>
+        </dependency>
 
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -68,7 +62,6 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.21</version>
         </dependency>
-
 
         <dependency>
             <groupId>javax</groupId>
@@ -94,7 +87,6 @@
             <version>1.0-SP1</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.glassfish.main.extras</groupId>
             <artifactId>glassfish-embedded-web</artifactId>
@@ -107,7 +99,6 @@
             <version>4.1</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-multipart</artifactId>
@@ -115,12 +106,17 @@
             <scope>provided</scope>
         </dependency>
 
-
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet</artifactId>
             <version>2.22</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>jaxws-rt</artifactId>
+            <version>2.2.10</version>
         </dependency>
     </dependencies>
 
