--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,73 +7,22 @@
         <listener-class>com.sun.xml.ws.transport.http.servlet.WSServletContextListener</listener-class>
     </listener>
     <servlet>
-        <description>JAX-WS endpoint</description>
-        <display-name>WSServlet</display-name>
-        <servlet-name>WSServlet</servlet-name>
-        <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>Faces Servlet</servlet-name>
-        <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+        <servlet-name>javax.ws.rs.core.Application</servlet-name>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>WSServlet</servlet-name>
-        <url-pattern>/services/*</url-pattern>
+        <servlet-name>javax.ws.rs.core.Application</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Faces Servlet</servlet-name>
+        <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+        <load-on-startup>2</load-on-startup>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
 
-    <welcome-file-list>
-        <welcome-file>faces/process.xhtml</welcome-file>
-    </welcome-file-list>
 </web-app>
-
-
-
-        <!--<?xml version="1.0" encoding="UTF-8"?>-->
-        <!--<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"-->
-        <!--xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"-->
-        <!--xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"-->
-        <!--version="3.1">-->
-        <!--<servlet>-->
-        <!--<description>JAX-WS endpoint</description>-->
-        <!--<display-name>WSServlet</display-name>-->
-        <!--<servlet-name>WSServlet</servlet-name>-->
-        <!--<servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class> -->
-        <!--<load-on-startup>1</load-on-startup>-->
-        <!--</servlet>-->
-        <!--<servlet>-->
-        <!--<servlet-name>Faces Servlet</servlet-name>-->
-        <!--<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>-->
-        <!--<load-on-startup>1</load-on-startup>-->
-        <!--</servlet>-->
-        <!--<servlet-mapping>-->
-        <!--<servlet-name>WSServlet</servlet-name>-->
-        <!--<url-pattern>/services/*</url-pattern>-->
-        <!--</servlet-mapping>-->
-        <!--<servlet-mapping>-->
-        <!--<servlet-name>Faces Servlet</servlet-name>-->
-        <!--<url-pattern>*.xhtml</url-pattern>-->
-        <!--</servlet-mapping>-->
-
-        <!--<welcome-file-list>-->
-        <!--<welcome-file>faces/process.xhtml</welcome-file>-->
-        <!--</welcome-file-list>-->
-        <!--</web-app>-->
-
-
-
-        <!-- <?xml version="1.0" encoding="UTF-8"?>
-        <web-app xmlns="http://java.sun.com/xml/ns/javaee"
-                   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                   xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-                  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-                   version="3.0">
-
-        </web-app>
-        -->
-
